--- a/locallibrary/catalog/templates/index.html
+++ b/locallibrary/catalog/templates/index.html
@@ -14,6 +14,7 @@
     <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
     <li><strong>Authors:</strong> {{ num_authors }}</li>
     <li><strong>Genre:</strong> {{ num_genre }}</li>
+    <li><strong>Language:</strong> {{ num_language }}</li>
   </ul>
 
 {% endblock %}
