--- a/locallibrary/catalog/templates/catalog/author_list.html
+++ b/locallibrary/catalog/templates/catalog/author_list.html
@@ -8,7 +8,7 @@
 
     {% for author in author_list %}
     <li>
-      <a href="{{ author.get_absolute_url }}">{{ author }}</a>({{ author.date_of_birth}})
+      <a href="{{ author.get_absolute_url }}">{{ author }}</a>({{ author.date_of_birth}}) - {% if author.date_of_death %}{{author.date_of_death}}{% endif %}
     </li>
     {% endfor %}
 
