--- a/locallibrary/catalog/templates/base_generic.html
+++ b/locallibrary/catalog/templates/base_generic.html
@@ -27,6 +27,7 @@
 
                 {% if user.is_authenticated %}
                 <li>{{ user.get_username }}</li>
+                <li><a href="{% url 'my-borrowed'%}"> My Borrowed</a></li>
                 <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
                 {% else %}
                     <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
